--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,24 @@ dist
 
 # TernJS port file
 .tern-port
+
+/build/
+*.suo
+*.user
+_ReSharper.*/
+*.sdf
+bin/
+obj/
+Debug/
+Release/
+.vs
+*.pubxml
+*.opensdf
+*.tlog
+*.log
+TestResult.xml
+*.VisualState.xml
+Version.cs
+Version.h
+Version.cpp
+profile.arm.json
