--- a/cources/az204/ServiceBusQueue/ServiceBusQueue/ServiceBusQueue.csproj
+++ b/cources/az204/ServiceBusQueue/ServiceBusQueue/ServiceBusQueue.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Storage.Queues" Version="12.12.0" />
+  </ItemGroup>
+
 </Project>
