--- a/cources/az204/AzureServiceBusQueue/AzureServiceBusQueue/AzureServiceBusQueue.csproj
+++ b/cources/az204/AzureServiceBusQueue/AzureServiceBusQueue/AzureServiceBusQueue.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Storage.Queues" Version="12.12.0" />
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.11.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
